# desafio-toro

./: .gitignore  README.md  build_lambda.sh  docker-compose.yml
architecture/: architecture.puml  sequence.puml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: api.py
backend/app/api/v1/: auth.py  questions.py  router.py
backend/app/core/: config.py  init_aws.py
backend/app/models/: question.py  user.py
backend/app/services/: auth.py  dynamodb.py  question.py  sns.py
backend/infrastructure/: .gitignore  README.md  app.py  bootstrap-policy.json  cdk.json  notify_user.py  process_question.py  requirements.txt
backend/infrastructure/cdk.out/: DesafioToroStack.assets.json  DesafioToroStack.template.json  manifest.json  tree.json
backend/infrastructure/cdk.out/asset.01211934c5f0c2ade989b2269479ef281649a7513b9c4892509ea6505f062ffc/: notify_user.py  process_question.py  requirements.txt
backend/infrastructure/lambda_package/: requirements.txt
backend/lambdas/: notify_response.py  notify_user.py  process_question.py  requirements.txt
