[tool.poetry]
name = "desafio-toro-backend"
version = "0.1.0"
description = ""
authors = ["Thais Gomes <thaismrgs@gmail.com>"]

readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.95.2"
mangum = "^0.15.0"
openai = "0.28.0"
boto3 = "^1.28.0"
pydantic = "1.10.13"
python-dotenv = "^1.0.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
httpx = "^0.24.1"
email-validator = "^1.3.1"
botocore = "^1.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
ruff = "^0.2.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[tool.lint]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.lint.isort]
known-first-party = ["app"]
profile = "black"
multi_line_output = 3

[tool.lint.per-file-ignores]
"tests/*" = ["PLR2004"]

[tool.lint.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.lint.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'